--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,16 @@ test.js
 node_modules/
 bower_components/
 
+# emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
 #logs
 *.log
 
