--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "conversation-simple",
-  "description": "A simple Node.js based web app which shows how to use the Conversation API to recognize user intents.",
-  "version": "0.1.1",
-  "main": "server.js",
+  "name": "felix",
+  "description": "felix is a conversational bot that aims to help people in the science community. You can ask questions about a published paper, ask her to summarize the information, ask her to analyze a plot etc.",
+  "version": "0.0.1",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "test-integration": "casperjs test ./test/integration/test.*.js",
     "test-integration-runner": "NODE_ENV=test node casper-runner.js",
     "test": "npm run lint && npm run test-unit && npm run test-integration-runner",
@@ -15,12 +15,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/watson-developer-cloud/conversation-simple.git"
+    "url": "https://github.com/akhilpandey95/m.bot.git"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "dotenv": "^2.0.0",
     "express": "^4.16.1",
     "watson-developer-cloud": "^3.0.7"
   },
@@ -35,7 +34,7 @@
     "supertest": "^1.2.0"
   },
   "engines": {
-    "node": ">= 6.9.x",
-    "npm": "> 3.10.x"
+    "node": ">= 8.0.x",
+    "npm": "> 5.0.x"
   }
 }
