--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "colors": "^1.2.1",
     "express": "^4.16.1",
     "watson-developer-cloud": "^3.0.7"
   },
