--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-integration-runner": "NODE_ENV=test node casper-runner.js",
     "test": "npm run lint && npm run test-unit && npm run test-integration-runner",
     "test-unit": "istanbul cover ./node_modules/mocha/bin/_mocha test/unit",
-    "lint": "eslint .",
+    "lint": "node .eslint.js",
     "autofix": "eslint --fix .",
     "codecov": "npm run test && (codecov || true)"
   },
