--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "colors": "^1.2.1",
-    "express": "^4.16.1",
-    "watson-developer-cloud": "^3.0.7"
+    "express": "^4.16.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
